test-cases/negative/test_071_if_without_condition.lay
# negative test: if statement completely missing condition
# expected: parser should reject this

if then
  print 'hello'
end if


